--- a/src/app/componets/header/header.component.html
+++ b/src/app/componets/header/header.component.html
@@ -28,7 +28,7 @@
                       <li><a [routerLink]="['/product-detail']">Product Details</a></li>
                       <li><a  href="contact">Contact Us</a></li>
                     
-                      <li><a href="#">Sign In</a></li>
+                      <li><a [routerLink]="'login'">Sign In</a></li>
                   </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
