--- a/src/app/componets/home/home.component.html
+++ b/src/app/componets/home/home.component.html
@@ -84,7 +84,7 @@
         </div>
         <div class="col-lg-6">
           <div class="main-button">
-            <a href="shop.html">View All</a>
+            <a href="shop">View All</a>
           </div>
         </div>
         <div class="col-lg-3 col-md-6">
@@ -154,7 +154,7 @@
         </div>
         <div class="col-lg-6">
           <div class="main-button">
-            <a href="shop.html">View All</a>
+            <a href="shop">View All</a>
           </div>
         </div>
         <div class="col-lg-2 col-md-6 col-sm-6">
